infrastructure/k8s/web/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app: web
  type: ClusterIP
  ports:
    - name: web
      protocol: TCP
      port: 3000
      targetPort: 3000
