infrastructure/k8s/web/web-api-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-api-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: itdog.de
      http:
        paths:
          - path: /api/comment(/|$)(.*)
            backend:
              serviceName: comment-service
              servicePort: 8000
          - path: /api/market(/|$)(.*)
            backend:
              serviceName: market-service
              servicePort: 8000
          - path: /api/auth(/|$)(.*)
            backend:
              serviceName: auth-service
              servicePort: 8000
