infrastructure/k8s/web/web-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: itdog.de
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: web-service
              servicePort: 3000
